--- a/Introduction_to_SQL.ipynb
+++ b/Introduction_to_SQL.ipynb
@@ -154,6 +154,64 @@
     "SELECT id, name, year_hired\n",
     "FROM employees;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **SQL Flavors/Versions**\n",
+    "1. Free & Paid(Complement to major databases s.a. Microsoft's SQL Server or Oracle Database)\n",
+    "    (a) All used w/ raltional databases.\n",
+    "    (b) Majority of Keywords were shared.\n",
+    "    (c) All must follow universal standards.\n",
+    "    (d) Only the additioinal features on top of these standards make flavors different.\n",
+    "2. Two most popular:\n",
+    "    (a) PostgreSQL\n",
+    "        (i) Free and open-source relational database system.\n",
+    "        (ii) UCB created.\n",
+    "        (iii) refers to both database system and its associated SQL falvor.\n",
+    "    (b) SQL Server\n",
+    "        (i) Free and paid(enterprise) versions.\n",
+    "        (ii) Microsoft created.\n",
+    "        (iii) T-SQL is Microsoft's SQL flavor, used w/ SQL Server databases.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example: Comparing PostgreSQL and SQL Server 'limit # of results'.\n",
+    "    Difference b/t these flavors is small."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT id, name\n",
+    "FROM employees\n",
+    "LIMIT 2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT TOP(2) id, name\n",
+    "FROM employees;"
+   ]
   }
  ],
  "metadata": {
