--- a/Intermediate_SQL.ipynb
+++ b/Intermediate_SQL.ipynb
@@ -386,6 +386,208 @@
    "source": [
     "NULL values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- COUNT(field_name) includes only non-missing values\n",
+    "-- COUNT(*) includes missing values\n",
+    "-- null: used when missing values appear for human error, infor not ava, unknown."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- IS NULL w/ WHERE clause indicates how much of data is missing\n",
+    "SELECT name\n",
+    "FROM people\n",
+    "WHERE birthdate IS NULL;\n",
+    "\n",
+    "SELECT COUNT(*) AS no_birthdates\n",
+    "FROM people\n",
+    "WHERE birthdate IS NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- IS NOT NULL: filter out missing values in the table\n",
+    "SELECT COUNT(name) AS no_birthdates\n",
+    "FROM people\n",
+    "WHERE birthdate IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- COUNT() vs. IS NOT NULL\n",
+    "SELECT COUNT(certification) AS count_certification\n",
+    "FROM films;\n",
+    "\n",
+    "SELECT COUNT(certification) AS count_certification\n",
+    "FROM films\n",
+    "WHERE certification IS NOT NULL;\n",
+    "-- two ways give the same thing, since COUNT(field) gives non-missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summarizing Data w/ Aggregate Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- When analyzing data, understand the dataset as a whole in addition to looking at individual records.\n",
+    "\n",
+    "-- COUNT() is one Aggregate Func.\n",
+    "\n",
+    "-- Other Four Aggregate Functions:\n",
+    "-- (1) AVG()\n",
+    "-- (2) SUM()\n",
+    "-- (3) MIN()\n",
+    "-- (4) MAX()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT AVG(budget)\n",
+    "FROM films;\n",
+    "\n",
+    "SELECT SUM(budget)\n",
+    "FROM films;\n",
+    "\n",
+    "SELECT MIN(budget)\n",
+    "FROM films;\n",
+    "\n",
+    "SELECT MAX(budget)\n",
+    "FROM films;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Non-numerical data\n",
+    "\n",
+    "AVG() and SUM() are two aggregate funcs can only use on numerical fields since require arithmetic.\n",
+    "\n",
+    "MIN(), MAX(), and COUNT() can be used in various types of data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT MIN(country) -- countries in order of alphabet\n",
+    "FROM films;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summarizing Subsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Using WHERE w/ aggregate funcs\n",
+    "SELECT AVG(budget) AS avg_budget\n",
+    "FROM films\n",
+    "WHERE release_year >= 2010;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean Up Decimals that might appear using ROUND()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Round a num to a specificed decimal.\n",
+    "-- Only be used w/ numberical fields.\n",
+    "\n",
+    "-- ROUND(num_to_round, decimal_places), by default decimal place is 0.\n",
+    "SELECT ROUND(AVG(budget), 2) AS avg_budget\n",
+    "FROM films\n",
+    "WHERE release_year >= 2010;\n",
+    "\n",
+    "-- ROUND() using a negative parameter, round to places to the left\n",
+    "SELECT ROUND(AVG(budget), -5) AS avg_budget\n",
+    "FROM films\n",
+    "WHERE release_year >= 2010;\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
